@@ -1,14 +1,14 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 10.00
 # Visual Studio 2008
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "IL Unicode", "..\..\src-IL\msvc\IL Unicode.vcproj", "{B46B180B-6079-4CE6-8647-A7D712774255}"
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "IL Unicode", "..\..\src-IL\msvc9\IL Unicode.vcproj", "{B46B180B-6079-4CE6-8647-A7D712774255}"
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILU Unicode", "..\..\src-ILU\msvc\ILU Unicode.vcproj", "{CCEBAA77-521A-4CC3-A4E0-C6B062FC2009}"
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILU Unicode", "..\..\src-ILU\msvc9\ILU Unicode.vcproj", "{CCEBAA77-521A-4CC3-A4E0-C6B062FC2009}"
 	ProjectSection(ProjectDependencies) = postProject
 		{B46B180B-6079-4CE6-8647-A7D712774255} = {B46B180B-6079-4CE6-8647-A7D712774255}
 	EndProjectSection
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILUT Unicode", "..\..\src-ILUT\msvc\ILUT Unicode.vcproj", "{1E0FF575-39C1-4A99-820F-8397E9D1351F}"
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILUT Unicode", "..\..\src-ILUT\msvc9\ILUT Unicode.vcproj", "{1E0FF575-39C1-4A99-820F-8397E9D1351F}"
 	ProjectSection(ProjectDependencies) = postProject
 		{B46B180B-6079-4CE6-8647-A7D712774255} = {B46B180B-6079-4CE6-8647-A7D712774255}
 		{CCEBAA77-521A-4CC3-A4E0-C6B062FC2009} = {CCEBAA77-521A-4CC3-A4E0-C6B062FC2009}
